--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.makeramen:roundedimageview:1.5.0' // RoundedImageView
+    compile 'com.android.support:support-v4:21.0.3' // Support library for SwipeRefreshLayout
 }
